--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 
       </div>
         </div>
-<img src="" width="100%" height="100%">
-  
+
+  <img src="https://github.com/hiro-eng/mizuhoka/blob/main/120552001_124537885801156_3313509445661716750_n.jpg?raw=true" width="100% height="100%">
+
 <div class = "top-wrapper">
  <div class = "container">
    <h1>>>>​NACH VORNE! 前へ</h1>
