--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
- <img src="https://github.com/hiro-eng/mizuhok/blob/main/20210319-0144_5c637ee13225aa7d3bb2b2ea3356113c.jpg?raw=true" width="100% height="100%">
+ <img src="https://github.com/hiro-eng/mizuhok/blob/main/20210319-0144_5c637ee13225aa7d3bb2b2ea3356113c.jpg?raw=true" width="180px" height="40px">
  <br>
 <div class = "header-right" ><a href="#z" id="ccc"><span id="back">HOME</span></a><br><span id="back"></span></div>
 
