--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </ul></div></div>
 
 <style>
+ @media screen and (max-width: 1160px){
 
 .scroll_list{
   margin: 0 auto;
@@ -43,7 +44,7 @@
   margin-left: 30px;
 }
 
-
+ }
 
 </style>
 
@@ -56,7 +57,7 @@
       </div>
         </div>
 
-  <img src="https://github.com/hiro-eng/mizuhoka/blob/main/120552001_124537885801156_3313509445661716750_n.jpg?raw=true" width="100% height="100%">
+  <img src="https://github.com/hiro-eng/mizuhoka/blob/main/120552001_124537885801156_3313509445661716750_n.jpg?raw=true" width="100%" height="100%">
 
 <div class = "top-wrapper">
  <div class = "container">
