--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
  <div class = "header">
    <div class = "container">
 <span id="z"></span>
-　<img src = "https://github.com/hiro-eng/mizuhok/blob/main/IMG_20210320_101749.jpg?raw=true" width="180px" height="40px">
+　<img src = "https://github.com/hiro-eng/ttt/blob/main/IMG_20210127_085328.jpg?raw=true" width="180px" height="40px">
 <div class = "header-right" ><a href="#z" id="ccc"><span id="back">HOME</span></a><br><span id="back">相談窓口</span></div>
 
       </div>
         </div>
- <br>
+ <br><br>
    <ul class="scroll_list">
-   <li class="list1">HOME Profile　DATE　スポンサー　ランニング部</li>
+   <li class="list1">HOME イメージキャラクター　いのちの相談窓口　スポンサー　Teck-Teck World</li>
  </ul>
- <br>
- <img src="https://github.com/hiro-eng/mizuhok/blob/main/Logopit_1616205467285.jpg?raw=true" wodth="100%" height="100%">
 
  <div class = "top-wrapper">
  <div class = "container">
-
+ 
    <h1>＞＞HOMEPAGE制作</h1>
 <h1>＞＞＞＞SNS運営/画像編集/LOGO作成</h1>
     <h2>＞＞＞企業様・個人事業主様のご注文に対応します<br></h2>
@@ -32,21 +30,14 @@
 <span id="a"></span>
       </div>
        </div>
-       <div class="news-wrapper">
-         <div class = "container">
-           <div class="box-title">＞＞＞NEWS</div>
-                                <br>
-       <iframe src ="news.html" width="100%" height=""></iframe>
-             </div></div>
-       　　　
   <img src="https://github.com/hiro-eng/teckmb/blob/main/Logopit_1612657194854.jpg?raw=true" width="100%" height="100%">
-
+  
 
 <hr>
 
 <div class="box1-wrapper">
   <div class = "container">
-
+   
  <div class ="box"><div class ="box-title">＞＞＞SPORTS応援企画</div>
   <p>「Teck-Teck World」ではスポーツ選手、スポーツ団体を応援する企画「SportsNet」を行っています。<br>
   スポーツ関係のホームページを無料作成しSNS宣伝も致します。</p>
@@ -54,9 +45,9 @@
       <div class ="box"><div class ="box-title">＞＞＞飲食店応援企画</div><p>「Teck-Teck World」では飲食店応援企画「Delizioso!」を行っております。<br>
        日本全国にある飲食店様のホームページを無料作成します。<br>
         ■「ホームページ作成」完全無料。その後当方のHP、SNSでお店の宣伝を致します。<br>
-       ■「完成後メンテナンス」３つのコースに分かれております(月額税込)。<br>
+       ■「完成後メンテナンス」３つのコースに分かれております(月額税込)。<br> 
        1.通常コース￥10,000-<br>
-       2.プロコース ￥30,000-<br>
+       2.プロコース ￥30,000-<br> 
        3.スペシャルコース ￥50,000-<br>
        ※メンテナンス不要の場合は一切料金は発生しません。<br>
        <span id="back">■専用twitterはこちら</span></p>
@@ -105,7 +96,7 @@
        </p></div></div>
 
          </div>
-               <img src="https://github.com/hiro-eng/teckmb/blob/main/Logopit_1612660036070.jpg?raw=true" width="100%" height="100%">
+               <img src="https://github.com/hiro-eng/teckmb/blob/main/Logopit_1612660036070.jpg?raw=true" width="100%" height="100%">                                             
                  <hr>
 <div class="sns-wrapper">
   <div class = "container">
@@ -114,6 +105,13 @@
    </div>
 
 <span id="d"></span>
+<div class="news-wrapper">
+  <div class = "container">
+    <div class="box-title">＞＞＞NEWS</div>
+                         <br>
+<iframe src ="news.html" width="100%" height=""></iframe>
+      </div></div>
+　　　
 
 <hr>
 <span id="e"></span>
@@ -127,22 +125,22 @@
 </div>
     　</div>
 <hr>
-
-
+  
+   
    <div class="senden-wrapper">
   <div class = "container">
    <img src = " https://github.com/hiro-eng/teckmb/blob/main/Logopit_1610579660496%20(2).jpg?raw=true" width="100%" height="100%">
              </div></div>
-
+   
    <hr>
-
-
-
+   
+   
+   
    <a href="#z"><img src="https://github.com/hiro-eng/teckmb/blob/main/IMG_20210205_182209%20(1).jpg?raw=true" id="yajirushi"width="50px" height="50px"></a>
 
 <img src="https://github.com/hiro-eng/teckmb/blob/main/Logopit_1612743831357.jpg?raw=true" width="100%" height="100%">
 
-  <!--実験-->
+  <!--実験-->  
  <style>
 @media screen and (max-width: 480px){
 .scroll_list{
@@ -154,7 +152,7 @@
   overflow-scrolling: touch;  /* スクロールを滑らかにする */
   -webkit-overflow-scrolling: touch;  /* スクロールを滑らかにする */
 }
-.scroll_list li{
+.scroll_list li{                                                                                 
   display: inline-block;  /* 横並びにする指定 */
   list-style: none;
   height: 50px;  /* 横スクロールする範囲の高さを指定 */
@@ -173,8 +171,8 @@
  <div class="footer-logo">Teck-Teck World</div>
    <p>インターネット事業<br>代表/HIROHIRO<br>本拠地/埼玉県さいたま市<br><span id="back">お問い合わせ</span><br><span id="back">teckteckwd@gmail.com</span><br>
          </p>
-     <br>
-     <div class="footer-text">©2020-2021 <br>Teck-Teck World</div>
+     <br>  
+     <div class="footer-text">©2020-2021 <br>Teck-Teck World</div>    
                           <style>
                              .footer-text{
                              background-color:gray;
@@ -185,7 +183,7 @@
                              padding-top:30px;
                              border-radius:0px 0px 10px 10px;
                              margin-bottom:5px;
-                             }
+                             }                             
                              </style>
                          </footer>
         <script src = "script7.js"></script>
