--- a/index.html
+++ b/index.html
@@ -1,144 +1,204 @@
 <!DOCTYPE html>
  <html lang = "ja">
   <head>
-    <meta charset = "utf - 8">
+   <meta charset = "utf-8">
     <meta name = "viewport" content = "width = device-width,initial - scale = 1.0">
-     <title>Teck-Teck World</title>
-     <link rel = "stylesheet" href = "stylesheetteck2.css">
+     <title>Mizuho Kato official</title>
+      <meta name = "keywords" content = "加藤みづほ,女子サッカー,ドイツ,イタリア"/>
+      <meta name = "description" content = "加藤みづほオフィシャルサイト"/>
+       <link rel = "stylesheet" href = "stylesheetmko.css">
+       <script src =
+'https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
         </head>
+
 <body>
- <div class = "header">
-   <div class = "container">
-<span id="z"></span>
-　<img src = "https://github.com/hiro-eng/ttt/blob/main/IMG_20210127_085328.jpg?raw=true" width="180px" height="40px">
-<div class = "header-right" ><a href="#z" id="ccc"><span id="back">HOME</span></a><br><span id="back">相談窓口</span></div>
-
-      </div>
-        </div>
- <br><br>
-   <ul class="scroll_list">
-   <li class="list1">HOME イメージキャラクター　いのちの相談窓口　スポンサー　Teck-Teck World</li>
- </ul>
-
- <div class = "top-wrapper">
- <div class = "container">
- 
-   <h1>＞＞HOMEPAGE制作</h1>
-<h1>＞＞＞＞SNS運営/画像編集/LOGO作成</h1>
-    <h2>＞＞＞企業様・個人事業主様のご注文に対応します<br></h2>
-<h3>＞＞SPONSOR事業・VOLUNTEER事業も行っています</h3>
 <span id="a"></span>
-      </div>
-       </div>
-  <img src="https://github.com/hiro-eng/teckmb/blob/main/Logopit_1612657194854.jpg?raw=true" width="100%" height="100%">
-  
+<div class = "header">
+    <div class = "container">
+      <img src = "https://github.com/hiro-eng/mizuhok/blob/main/IMG_20210320_101749.jpg?raw=true" width="180px" height="40px">
+      <div class = "header-right" ><a href = "#a" id = "link"><span id="back">HOME</span></a><br><a href = "#" id = "link"><span id="back">ギャラリー</span></a></div>
+　　　　</div></div>
 
-<hr>
-
-<div class="box1-wrapper">
+<div class = "menu-wrapper">
   <div class = "container">
-   
- <div class ="box"><div class ="box-title">＞＞＞SPORTS応援企画</div>
-  <p>「Teck-Teck World」ではスポーツ選手、スポーツ団体を応援する企画「SportsNet」を行っています。<br>
-  スポーツ関係のホームページを無料作成しSNS宣伝も致します。</p>
-  </div>
-      <div class ="box"><div class ="box-title">＞＞＞飲食店応援企画</div><p>「Teck-Teck World」では飲食店応援企画「Delizioso!」を行っております。<br>
-       日本全国にある飲食店様のホームページを無料作成します。<br>
-        ■「ホームページ作成」完全無料。その後当方のHP、SNSでお店の宣伝を致します。<br>
-       ■「完成後メンテナンス」３つのコースに分かれております(月額税込)。<br> 
-       1.通常コース￥10,000-<br>
-       2.プロコース ￥30,000-<br> 
-       3.スペシャルコース ￥50,000-<br>
-       ※メンテナンス不要の場合は一切料金は発生しません。<br>
-       <span id="back">■専用twitterはこちら</span></p>
-</div>
-<img src="https://github.com/hiro-eng/teckmb/blob/main/Logopit_1612656723066.jpg?raw=true" width="100%" height="100%">
- <br>
-   <div class ="box"><div class ="box-title">＞＞＞PROGRAMER募集中</div><p>「Teck-Teck World」ではお仕事を引き受けてくださるプログラマー様、webデザイナー様を募集しております。<br>
-   企業様・個人事業主様から頂きましたお仕事をお願い致します。</p>
-  </div>
-    <div class ="box"><div class ="box-title">＞＞＞代表 HIROHIRO</div>
-    <p>「Teck-Teck World」はHIROHIROを代表として活動しております。埼玉県さいたま市在住/プログラマー/食生活アドバイザー保持/簿記、会計、証券の知識有/<br>
-<span id="back">■個人twitterはこちら</span><br>
-<span id="back">■インタビュー記事はこちら(スポマネ)</span></p></div>
+    <ul class="scroll_list">
+    <li class="list1">
+      <a href = "#a" id = "link">＞HOME</a>
+      <a href = "#b" id = "link">＞NEWS</a>
+      <a href = "#c" id = "link">＞Profile</a>
+      <a href = "#d" id = "link">＞DATE</a>
+      <a href = "#e" id = "link">＞スポンサー</a>
+      <a href = "#f" id = "link">＞みずチューブ</a>
+      <a href = "#g" id = "link">＞ランニング部</a>
+      <a href = "#h" id = "link">＞お問い合わせ</a>
+      <a href = "#i" id = "link">＞LINK</a></li>
+       </ul>
+       <br>
+        </div></div>
+
+<hr size = "" color = "red">
+
+<div class = "top-wrapper">
+ <div class = "container">
+   <img src = "https://file30-d-cdn.aquapal.net//files/20210321-1052_ccf18c0a5f56bfe12b07ccfcd9490592.jpg" width = "100%" height = "100%">
+ <h1>Mizuho Kato official website</h1>
+    </div></div>
+
+<hr size = "" color = "red">
+
 <span id="b"></span>
-</div></div>
-
-
-
-
-<hr>
-
-
-<div class="box2-wrapper">
-  <div class = "container">
-          <div class ="box"><div class ="box-title">＞＞＞IMAGECHARACTER</div>
-        <p>■名前<br>加藤みづほ MizuhoKato <br>■ポジション<br>WINGBACK/WINGER <br>■経歴<br>大阪体育大学～1.FC KOLN～UPC TAVAGNACCO～vfl Bochum 1848
-        </p>
-  <p><span id="back">加藤みずほ選手</span><br>
-   <span id="back">オフィシャルwebサイト</span><br>
-   <span id="back">Youtubeチャンネル</span><br>
-   <span id="back">twitter</span> <span id="back"> facebook</span> <span id="back"> Instagram</span><br></p></div>
- <img src="https://github.com/hiro-eng/mizuhoka/blob/main/120552001_124537885801156_3313509445661716750_n.jpg?raw=true" width="100% height="100%">
- <br>
-<span id="c"></span>
-            <p>画像は「加藤みづほオフィシャルwebサイト」より(UPC TAVAGNACCO所属時)</p>
- </div></div>
-<hr>
-<div class="sponsor-wrapper">
-  <div class = "container">
-
-<div class ="box"><div class ="box-title">＞＞＞SPONSOR</div>
-       <p>Teck-Teck Worldは様々なスポーツ選手、団体のスポンサーになっています。<br>
- ■海外女子サッカー、<a href="https://ohnooo18.wixsite.com/mizuhokato">加藤みづほ選手</a>スポンサー。<br>
- ■京都フットサルチームCIMA DE MAIS/琉球帆布Instagramスポンサー。<br>
- ■一般社団法人 日本ろう者スキー協会スポンサー。
-       </p></div></div>
-
-         </div>
-               <img src="https://github.com/hiro-eng/teckmb/blob/main/Logopit_1612660036070.jpg?raw=true" width="100%" height="100%">                                             
-                 <hr>
-<div class="sns-wrapper">
-  <div class = "container">
-<div class = "sns-text">Mail<br><a href="https://twitter.com/world_teck?s=09" id="ccc">Twitter</a><br>Instagram<br>Facebook</div>
-  </div>
-   </div>
-
-<span id="d"></span>
-<div class="news-wrapper">
-  <div class = "container">
-    <div class="box-title">＞＞＞NEWS</div>
-                         <br>
-<iframe src ="news.html" width="100%" height=""></iframe>
+<div class = "news-wrapper">
+ <div class = "container">
+   <div class="box-title">＞＞＞NEWS</div>
+    <br>
+     <iframe src ="mizuho-news.html" width="100%" height=""></iframe>
       </div></div>
-　　　
 
-<hr>
+<hr size = "" color = "red">
+<span id="c"></span>
+<div class = "text-wrapper">
+ <div class = "container">
+  <div class ="box"><div class = "box-title">＞＞＞加藤みづほ Profile</div>
+   <p>愛知県刈谷市出身。福井工大福井高、大阪体育大を卒業後、単身で渡独。<br>
+1.FC ケルンで３シーズンを経て、イタリア UPC タヴァニャッコへ。その後、再びドイツへ戻り現在はボーフムに所属中。<br>
+クラウドファンディング女子サッカープレイヤー。無名選手から世界で活躍する女子サッカー選手へ。<br>
+サッカーを通して、日本と世界を繋げられる存在を目指します。<br>
+　</p>
+ </div></div></div>
+
+<hr size = "" color = "red">
+<span id="d"></span>
+<div class = "text-wrapper">
+ <div class = "container">
+  <div class ="box"><div class = "box-title">＞＞＞DATA</div>
+   <p>■Birth 13.12.1992<br>
+■Bodyshape 160㎝ / 52㎏<br>
+■Position <br>
+WING BACK / WINGER<br>
+■CLUB<br>
+2011-2014<br>
+OSAKA UNIVERSITY OF HEALTH AND SPORT SCIENCES (JAPAN)<br>
+2015-2017<br>
+1.FC KOELN (GERMANY)<br>
+2019-2020<br>
+UPC TAVAGNACCO (ITALY)<br>
+2021-<br>
+VfL Bochum 1848　(GERMANY)<br>
+<a href = "#" id = "link2">ドイツ・ボーフム公式HP</a>
+</p>
+    </div></div></div>
+
+
+<hr size = "" color = "red">
 <span id="e"></span>
-<div class="teck-wrapper">
-  <div class = "container">
-   <div class = "box-title">＞＞＞VOLUNTEER事業について</div>
-    <div class = "teck-text">
-<p>■Teck-Teck Worldはボランティア事業「いのちの相談窓口」も運営しております。<br>
- <a href="https://hiro-eng.github.io/ikitemb/" target="_blank" ><span id="back">いのちの相談窓口</span></a></p>
-</div>
-</div>
-    　</div>
-<hr>
-  
-   
-   <div class="senden-wrapper">
-  <div class = "container">
-   <img src = " https://github.com/hiro-eng/teckmb/blob/main/Logopit_1610579660496%20(2).jpg?raw=true" width="100%" height="100%">
-             </div></div>
-   
-   <hr>
-   
-   
-   
-   <a href="#z"><img src="https://github.com/hiro-eng/teckmb/blob/main/IMG_20210205_182209%20(1).jpg?raw=true" id="yajirushi"width="50px" height="50px"></a>
+<div class = "text-wrapper">
+ <div class = "container">
+  <div class ="box"><div class = "box-title">＞＞＞SPONSOR</div>
+   <p>【株式会社　ラソス　様】<br>
 
-<img src="https://github.com/hiro-eng/teckmb/blob/main/Logopit_1612743831357.jpg?raw=true" width="100%" height="100%">
+宮城県仙台市に拠点を置く、ラソスソサイチ＆フットサルフィールド。<br>
+東北初！ソサイチとフットサルが公式サイズで楽しめるロングパイル人工芝を採用したプロ仕様のスポーツ施設です。<br>
+縁もゆかりもなかった宮城県仙台市ですが、サッカーを通してこの御縁を頂き、今季のイタリアでの活動を支えて頂いております。<br>
+ <a href = "#" id = "link2">株式会社ラソス様 HP</a></p>
+
+
+【ゼネラルトランス株式会社 様】<br>
+工業や産業が盛んな私の出身地域である西三河/安城市に拠点を置き、<br>工場や物流拠点を繋ぐ輸送業務を行っているゼネラルトランス株式会社様。<br>
+「地元の地域」「サッカー」を通して御縁を頂き、<br>地元の企業様という熱く力強いご声援とともに私の活動をサポートをして頂いております。<br>
+<a href = "#" id = "link2">ゼネラルトランス株式会社様 HP</a></p>
+​
+【Teck-Teck World 様】<br>
+​埼玉県さいたま市に本拠地を置き、企業や個人事業主様のホームページ制作・管理、IT関連事業を行っています。<br>また、自殺予防事業にも取り組んでいるTeck-Teck World様。<br>
+代表者のHIROHIRO様から熱い想いと多大なるサポート、そしてこのような御縁を頂き、私の活動を支えて頂いております。<br>
+<a href = "#" id = "link2">Teck-Teck World様 HP</a>
+</p>
+    </div></div></div>
+
+
+<hr size = "" color = "red">
+
+<div class = "image">
+<img src = "https://file15-d-cdn.svk.jp//files/20210321-0953_b1704ae8fb217a11cd26d1f30c829e96.jpg" width = "100%" height = "100%">
+<br>
+<h2>NACH VORNE！！！！！！！</h2>
+</div>
+
+<br>
+<hr size = "" color = "red">
+
+<span id="f"></span>
+<div class = "text-wrapper">
+  <div class = "container">
+    <div class ="box"><div class = "box-title">＞＞＞みずチューブ</div>
+     <p>加藤みづほによるYoutubeチャンネル。<br>現役選手として海外での奮闘、ドイツでの生活、私が実際に見て聞いて感じて、
+      経験したこと体験してること、<br>みなさんに少しでも伝わり共有できたら嬉しいです！　<br>頑張り過ぎません。ぼちぼち配信します。<br>
+       <a href = "" id = "link2">みずチューブ twitterページ</a>
+       </p>
+      </div></div></div>
+
+
+<hr size = "" color = "red">
+
+<span id="g"></span>
+      <div class = "text-wrapper">
+        <div class = "container">
+          <div class ="box"><div class = "box-title">＞＞＞ランニング部 WiR LAUFEN</div>
+           <p>加藤みづほが、女子サッカー選手だけど走るの好きが故に、ランニング部【WiR LAUFEN】結成！<br>
+      ドイツ語で「私たちは走る」走る女性フルマラソン目指しちゃう？<br>
+      一緒に走ろう！共有しよう！みんなで楽しく走って自分改革！ <br>部員何人集まるかな。<br> #ヴィアラウフェン<br>
+      <a href = "https://twitter.com/wir_laufen" id = "link2">ランニング部 WiRLAUFEN twitterページ</a>
+
+      </p>
+            </div></div></div>
+
+
+<hr size = "" color = "red">
+<span id="h"></span>
+<div class = "text-wrapper">
+ <div class = "container">
+  <div class ="box"><div class = "box-title">＞＞＞お問い合わせ</div>
+   <p>スポンサー企業様募集中。他、取材などのお問い合わせはこちらまでお願いいたします。<br>
+     <a href = "mailto:teckteckwd@gmail.com" id = "link2">Mail address</a></p>
+
+             </div></div></div>
+
+
+<hr size = "" color = "red">
+
+<span id="i"></span>
+<div class = "banner-wrapper">
+  <div class = "container">
+    <div class ="box"><div class = "box-title">＞＞＞LINK</div>
+<a href = "https://www.youtube.com/channel/UCNR6__SeShvm6YoYeVxaf3w" target="_blank"><img src = "https://github.com/hiro-eng/mizuhok/blob/main/Logopit_1616202912682.jpg?raw=true" width="300px" height="80px"></a>
+<a href = "https://twitter.com/wir_laufen" target="_blank"><img src = "https://github.com/hiro-eng/mizuhok/blob/main/Logopit_1616202878145.jpg?raw=true" width="300px" height="80px"></a>
+<a href = "https://note.com/soccer_kankyou/n/n499bcd73be59" target="_blank"><img src = "https://file30-d-cdn.aquapal.net//files/20210321-1138_1bb55f69c7bda10e6ec7314c86830228.jpg" width="300px" height="80px"></a>
+<img src = "https://github.com/hiro-eng/mizuhok/blob/main/Logopit_1616202827089.jpg?raw=true" width="300px" height="80px">
+<img src = "" width="300px" height="80px">
+<br>
+<div class = "box-title">＞＞＞＞＞個人スポンサー企業 様</div>
+<img src = "" width="300px" height="80px">
+<img src = "" width="300px" height="80px">
+<img src = "" width="300px" height="80px">
+
+  </div></div></div>
+
+<div class = "sns-wrapper">
+  <div class = "container">
+    <div class = "sns-text">
+      <p><a href = "#" id = "link">Twitter</a><br>
+         <a href = "#" id = "link">Facebook</a><br>
+         <a href = "#" id = "link">Instagram</a></p>
+
+    </div></div></div>
+  <div class ="last-text"><a href = "#" id = "link">TOP</a><br></div>
+<br>
+<hr size = "" color = "red">
+<footer>
+
+  <div class = "footer-logo">加藤みずほ official site</div>
+   <div class = "footer-text">©2021 Mizuho Kato<br>
+    </div>
+    </footer>
 
   <!--実験-->  
  <style>
@@ -166,27 +226,7 @@
 }
 
 </style>
- <hr>
-<footer>
- <div class="footer-logo">Teck-Teck World</div>
-   <p>インターネット事業<br>代表/HIROHIRO<br>本拠地/埼玉県さいたま市<br><span id="back">お問い合わせ</span><br><span id="back">teckteckwd@gmail.com</span><br>
-         </p>
-     <br>  
-     <div class="footer-text">©2020-2021 <br>Teck-Teck World</div>    
-                          <style>
-                             .footer-text{
-                             background-color:gray;
-                             color:#f5f5dc;
-                             font-weight:bold;
-                             text-align:center;
-                             height:80px;
-                             padding-top:30px;
-                             border-radius:0px 0px 10px 10px;
-                             margin-bottom:5px;
-                             }                             
-                             </style>
-                         </footer>
-        <script src = "script7.js"></script>
+ 
+    <script src = "scriptkatom.js"></script>
+  </body></html>
 
-
-        </body></html>
