--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div class = "top-wrapper">
  <div class = "container">
-   <img src = "https://file30-d-cdn.aquapal.net//files/20210321-1052_ccf18c0a5f56bfe12b07ccfcd9490592.jpg" width = "100%" height = "100%">
+   <img src = "https://github.com/hiro-eng/mizuhok/blob/main/IMG_20210325_112822.jpg?raw=true" width = "100%" height = "100%">
  <h1>Mizuho Kato official website</h1>
     </div></div>
 
