--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ VfL Bochum 1848　(GERMANY)<br>
 <hr size = "" color = "red">
 
 <div class = "image">
-<img src = "https://file15-d-cdn.svk.jp//files/20210321-0953_b1704ae8fb217a11cd26d1f30c829e96.jpg" width = "100%" height = "100%">
+<img src = "https://github.com/hiro-eng/mizuhok/blob/main/Logopit_1616639382195.jpg?raw=true" width = "100%" height = "100%">
 <br>
 <h2>NACH VORNE！！！！！！！</h2>
 </div>
